2.6

2.5
- Add new class of tests for queries that are supposed to fail
- Changes to make failures in commutative operators commutative too
- Added new optimization to remove useless joins
- Correct optimization over selection and product
- Fix Python code generator to correctly escape strings
- Improved multi-line text editor
- Multi-line mode has support for optimizations
- Workaround a QSettings bug so that sessions work again
- "Save" button works on the relation selected in the list, instead of the
  one shown in the central table

2.4
- Improve error reporting
- Release is now signed with PGP
- Doesn't crash on network errors
- Fixed optimization introduced in 2.2 that did not hold in all cases
- Better handling of parenthesis inside string literals
- Emit less parenthesis in optimized queries

2.3
- Very small release. The windows setup now installs the C++ library
  automatically.
- The setup was re-made on windows 10, so now it works properly on windows 10
  and all the symbols are shown.
- If you don't use windows, this release is identical to the previous.

2.2
- Added again make install target
- Ctrl+C in the terminal will terminate the GUI
- UI indicates ongoing processing with a label
- Added new optimizations
- Added shortcuts within the UI
- History can be navigated with up/down arrows
- Single line edit mode allows for the resulting relation to be written
  within the query textbox itself.

2.1
- Introduced sessions; GUI loads the same relations of the previous time
- redesigned GUI, to fit in smaller screens
- Fix bug in tokenizer
- Fixed bug where select on relations with '---' values would always fail
- Improve error reporting
- Fix bug in code to check for new version
- Performance improvements
- More Pythonic name for classes (API is compatible with version 2.0)

2.0
- Fix bug in relational-cli that made it crash when an exception was raised
- Point to new website
- Switch to Python3 and drop support for Python2
- Switch to Qt5