@@ -1,4 +1,5 @@
 2.6
+- Improved survey sending
 
 2.5
 - Add new class of tests for queries that are supposed to fail
